# azure-sphere-external-mcu-ota

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  delay.c  littlefs_w25q128.c  littlefs_w25q128.h  main.c
Hardware/mt3620_rdb/: sample_hardware.json
Hardware/mt3620_rdb/inc/hw/: sample_hardware.h
ota/: extmcu_hal.c  extmcu_hal.h  ota.c  ota.h
script/: clean_resrouces.sh  ota.py  setup_resources.sh
